--- a/index.html
+++ b/index.html
@@ -9,7 +9,55 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>countdown timer project</h1>
+    <section class="section-center">
+      <!-- image -->
+      <article class="gift-img">
+        <img src="./gift.jpeg" alt="gift picture" />
+      </article>
+      <!-- info -->
+      <article class="gift-info">
+        <h3>old iphone giveaway</h3>
+        <h4 class="giveaway">
+          giveaway ends on Sunday, November 12th 2023, 10:00am
+        </h4>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Soluta
+          itaque fugiat illo necessitatibus ea quas beatae? Voluptate, placeat
+          sit. Optio totam, omnis quam natus laborum explicabo nam quia ex
+          suscipit.
+        </p>
+        <div class="deadline">
+          <div class="deadline-format">
+            <!-- days -->
+            <div>
+              <h4 class="days">34</h4>
+              <span>days</span>
+            </div>
+          </div>
+          <!-- hours -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="hours">10</h4>
+              <span>hours</span>
+            </div>
+          </div>
+          <!-- minutes -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="mins">40</h4>
+              <span>mins</span>
+            </div>
+          </div>
+          <!-- seconds -->
+          <div class="deadline-format">
+            <div>
+              <h4 class="secs">60</h4>
+              <span>secs</span>
+            </div>
+          </div>
+        </div>
+      </article>
+    </section>
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
